--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ru.netology</groupId>
-    <artifactId>products-manager</artifactId>
+    <artifactId>products-manager-rich-model</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
